--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <module>service/aliyun-oss</module>
         <module>service/service-sms</module>
         <module>service/service-ucenter</module>
+        <module>service/service-manage</module>
     </modules>
 
     <parent>
