--- a/service/service-manage/src/main/resources/application.properties
+++ b/service/service-manage/src/main/resources/application.properties
@@ -1,12 +1,22 @@
 # ????
-server.port=8105
+server.port=8101
 # ???
-spring.application.name=service-sms
+spring.application.name=service-manage
+# ?????dev?test?prod
+spring.profiles.active=dev
 # mysql?????
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/seckill?serverTimezone=GMT%2B8
 spring.datasource.username=root
 spring.datasource.password=111111
+mybatis-plus.mapper-locations=classpath:com/zjut/manageservice/mapper/xml/*.xml
+## ??????
+#logging.level.root=WARN
+##mybatis??
+#mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.time-zone=GMT+8
+
 spring.redis.host=127.0.0.1
 spring.redis.port=6379
 spring.redis.database= 0
@@ -16,8 +26,3 @@ spring.redis.lettuce.pool.max-wait=-1
 #????????(???????)
 spring.redis.lettuce.pool.max-idle=5
 spring.redis.lettuce.pool.min-idle=0
-#????
-#??json???????
-spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
-spring.jackson.time-zone=GMT+8
-
