--- a/service/service-ucenter/src/main/resources/application.properties
+++ b/service/service-ucenter/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8160
 spring.application.name=service-ucenter
 # mysql?????
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/guli_edu?serverTimezone=GMT%2B8
+spring.datasource.url=jdbc:mysql://localhost:3306/seckill?serverTimezone=GMT%2B8
 spring.datasource.username=root
 spring.datasource.password=111111
 spring.redis.host=127.0.0.1
