--- a/service/pom.xml
+++ b/service/pom.xml
@@ -15,6 +15,7 @@
         <module>aliyun-oss</module>
         <module>service-manage</module>
         <module>service-sms</module>
+        <module>service-cms</module>
         <module>service-ucenter</module>
     </modules>
 
