--- a/service/service-manage/src/main/resources/application.properties
+++ b/service/service-manage/src/main/resources/application.properties
@@ -6,9 +6,9 @@ spring.application.name=service-manage
 spring.profiles.active=dev
 # mysql?????
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/seckill?serverTimezone=GMT%2B8
+spring.datasource.url=jdbc:mysql://localhost:3306/seckill?serverTimezone=GMT%2B8&useSSL=false&characterEncoding=utf-8
 spring.datasource.username=root
-spring.datasource.password=111111
+spring.datasource.password=123456789
 mybatis-plus.mapper-locations=classpath:com/zjut/manageservice/mapper/xml/*.xml
 ## ??????
 #logging.level.root=WARN
