--- a/service/service-audit/src/main/resources/application.properties
+++ b/service/service-audit/src/main/resources/application.properties
@@ -8,9 +8,9 @@ spring.profiles.active=dev
 
 # mysql?????
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/seckill?serverTimezone=GMT%2B8&useSSL=false&characterEncoding=utf-8
-spring.datasource.username=root
-spring.datasource.password=123456789
+spring.datasource.url=jdbc:mysql://192.168.137.240:3306/seckill?serverTimezone=GMT%2B8&useSSL=false&characterEncoding=utf-8
+spring.datasource.username=xwww
+spring.datasource.password=123456
 #??json???????
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
