--- a/service/service-sms/src/main/resources/application.properties
+++ b/service/service-sms/src/main/resources/application.properties
@@ -20,4 +20,5 @@ spring.redis.lettuce.pool.min-idle=0
 #??json???????
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
-
+# nacos????
+spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
