--- a/service/service-cms/src/main/resources/application.properties
+++ b/service/service-cms/src/main/resources/application.properties
@@ -25,3 +25,7 @@ spring.redis.lettuce.pool.max-wait=-1
 #????????(???????)
 spring.redis.lettuce.pool.max-idle=5
 spring.redis.lettuce.pool.min-idle=0
+
+
+# nacos????
+spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
