--- a/service/service-ucenter/src/main/resources/application.properties
+++ b/service/service-ucenter/src/main/resources/application.properties
@@ -32,3 +32,6 @@ wx.open.app_secret=a7482517235173ddb4083788de60b90e
 
 # ?????? ???url
 wx.open.redirect_url=http://localhost:8160/api/ucenter/wx/callback
+
+# nacos????
+spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
