--- a/service/aliyun-oss/src/main/resources/application.properties
+++ b/service/aliyun-oss/src/main/resources/application.properties
@@ -9,3 +9,5 @@ aliyun.oss.file.endpoint=oss-cn-hangzhou.aliyuncs.com
 aliyun.oss.file.keyid=LTAI5tR68Tbq1H9BdGmiXq7G
 aliyun.oss.file.keysecret=qhpdNwo8KTg6IS5TBdv6XSDnV0PZey
 aliyun.oss.file.bucketname=dasa
+# nacos????
+spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
