--- a/service/service-audit/src/main/resources/application.properties
+++ b/service/service-audit/src/main/resources/application.properties
@@ -8,9 +8,12 @@ spring.profiles.active=dev
 
 # mysql?????
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://192.168.137.240:3306/seckill?serverTimezone=GMT%2B8&useSSL=false&characterEncoding=utf-8
-spring.datasource.username=xwww
-spring.datasource.password=123456
+#spring.datasource.url=jdbc:mysql://192.168.235.240:3306/seckill?serverTimezone=GMT%2B8&useSSL=false&characterEncoding=utf-8
+#spring.datasource.username=xwww
+#spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://localhost:3306/seckill?serverTimezone=GMT%2B8&useSSL=false&characterEncoding=utf-8
+spring.datasource.username=root
+spring.datasource.password=123456789
 #??json???????
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 spring.jackson.time-zone=GMT+8
@@ -19,3 +22,6 @@ spring.jackson.time-zone=GMT+8
 #logging.level.root=INFO
 #mybatis??
 mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+
+
+spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
