--- a/service/service-booking/pom.xml
+++ b/service/service-booking/pom.xml
@@ -6,15 +6,15 @@
         <artifactId>service</artifactId>
         <groupId>com.example</groupId>
         <version>0.0.1-SNAPSHOT</version>
-
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>service-cms</artifactId>
+    <artifactId>service-booking</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
 </project>
