--- a/service/service-booking/src/main/resources/application.properties
+++ b/service/service-booking/src/main/resources/application.properties
@@ -1,18 +1,25 @@
 # ????
-server.port=8105
+server.port=8106
 # ???
-spring.application.name=service-sms
+spring.application.name=service-booking
+# ?????dev?test?prod
+spring.profiles.active=dev
 # mysql?????
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #spring.datasource.url=jdbc:mysql://192.168.235.240:3306/seckill?serverTimezone=GMT%2B8&useSSL=false&characterEncoding=utf-8
 #spring.datasource.username=xwww
 #spring.datasource.password=123456
-
 spring.datasource.url=jdbc:mysql://localhost:3306/seckill?serverTimezone=GMT%2B8&useSSL=false&characterEncoding=utf-8
 spring.datasource.username=root
 spring.datasource.password=123456789
-
+mybatis-plus.mapper-locations=classpath:com/zjut/bookservice/mapper/xml/*.xml
+## ??????
+#logging.level.root=WARN
+##mybatis??
+#mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+spring.jackson.time-zone=GMT+8
 
 spring.redis.host=127.0.0.1
 spring.redis.port=6379
@@ -23,9 +30,9 @@ spring.redis.lettuce.pool.max-wait=-1
 #????????(???????)
 spring.redis.lettuce.pool.max-idle=5
 spring.redis.lettuce.pool.min-idle=0
-#????
-#??json???????
-spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
-spring.jackson.time-zone=GMT+8
+
+
+
+
 # nacos????
 spring.cloud.nacos.discovery.server-addr=127.0.0.1:8848
