--- a/service/service-cms/src/main/resources/application.properties
+++ b/service/service-cms/src/main/resources/application.properties
@@ -6,9 +6,13 @@ spring.application.name=service-cms
 spring.profiles.active=dev
 # mysql?????
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/seckill?serverTimezone=GMT%2B8
+
+#spring.datasource.url=jdbc:mysql://192.168.235.240:3306/seckill?serverTimezone=GMT%2B8&useSSL=false&characterEncoding=utf-8
+#spring.datasource.username=xwww
+#spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://localhost:3306/seckill?serverTimezone=GMT%2B8&useSSL=false&characterEncoding=utf-8
 spring.datasource.username=root
-spring.datasource.password=111111
+spring.datasource.password=123456789
 mybatis-plus.mapper-locations=classpath:com/zjut/cmsservice/mapper/xml/*.xml
 ## ??????
 #logging.level.root=WARN
