--- a/service/service-collection/src/main/resources/application.properties
+++ b/service/service-collection/src/main/resources/application.properties
@@ -6,10 +6,14 @@ spring.application.name=service-collection
 spring.profiles.active=dev
 # mysql?????
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#spring.datasource.url=jdbc:mysql://192.168.235.240:3306/seckill?serverTimezone=GMT%2B8&useSSL=false&characterEncoding=utf-8
+#spring.datasource.username=xwww
+#spring.datasource.password=123456
 spring.datasource.url=jdbc:mysql://localhost:3306/seckill?serverTimezone=GMT%2B8&useSSL=false&characterEncoding=utf-8
 spring.datasource.username=root
-spring.datasource.password=111111
-mybatis-plus.mapper-locations=classpath:com/zjut/manageservice/mapper/xml/*.xml
+spring.datasource.password=123456789
+mybatis-plus.mapper-locations=classpath:com/zjut/collectionservice/mapper/xml/*.xml
 ## ??????
 #logging.level.root=WARN
 ##mybatis??
