--- a/service/service-order1/pom.xml
+++ b/service/service-order1/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>service-order</artifactId>
+    <artifactId>service-order1</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
