--- a/service/service-ucenter/src/main/resources/application.properties
+++ b/service/service-ucenter/src/main/resources/application.properties
@@ -4,9 +4,16 @@ server.port=8160
 spring.application.name=service-ucenter
 # mysql?????
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/seckill?serverTimezone=GMT%2B8
+#
+#spring.datasource.url=jdbc:mysql://192.168.235.240:3306/seckill?serverTimezone=GMT%2B8&useSSL=false&characterEncoding=utf-8
+#spring.datasource.username=xwww
+#spring.datasource.password=123456
+
+spring.datasource.url=jdbc:mysql://localhost:3306/seckill?serverTimezone=GMT%2B8&useSSL=false&characterEncoding=utf-8
 spring.datasource.username=root
-spring.datasource.password=111111
+spring.datasource.password=123456789
+
+
 spring.redis.host=127.0.0.1
 spring.redis.port=6379
 spring.redis.database= 0
